--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,7 +198,7 @@ main{
     padding: 4rem 1rem;
 }
 
-.cols-3{
+.cols-cols-3{
     grid-template-columns: repeat(1, 1fr);
     gap: 3rem;
 }
@@ -214,7 +214,7 @@ main{
     align-items: center;
 }
 
-.cols-3 img{
+.cols-cols-3 img{
     max-width: 100%;
 }
 
@@ -296,4 +296,140 @@ main{
 .exclusive-container img{
     max-width: 500px;
     
+}
+
+/* Main queries */
+
+@media (max-width: 800px){
+    .section-title{
+        font-size: 1rem;
+    }
+
+    .cols-cols-3{
+        grid-template-columns: 2, 1fr ;
+    }
+
+    .cols-cols-4{
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+    .product-name, .product-price, .rate{
+        max-width: 1rem;
+        /* overflow: hidden; */
+        font-size: 0.8rem ;
+    }
+
+    .exclusive-container{
+        flex-direction: column-reverse;
+    }
+
+    .exclusive-container img{
+        margin-bottom: 4rem ;
+    }
+
+    
+}
+
+/* Main Content */
+
+/* Testimoniols */
+
+.testimonials{
+    display: flex;
+    padding: 4rem 1rem;
+    justify-content: space-evenly;
+
+}
+
+.testimonial{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-basis: 30%;
+    text-align: center;
+    box-shadow: 0 0 15px #afafaf;
+    padding: 1rem;
+    border-radius:1rem ;
+    cursor: pointer;
+    transition: all 0.1s;
+
+}
+
+.testimonial:hover{
+    transform: translateY(-5px) ;
+}
+
+
+.testimonial p{
+    margin: 5px 0;
+}
+
+.testimonial p:first-child{
+    font-weight: bold;
+    font-size: 5rem;
+    color: #0084ff;
+    margin-top: 3rem;
+    line-height: 2rem;
+}
+
+.testimonial p:last-child{
+    font-weight: bold;
+}
+
+/* Media query */
+@media (max-width: 800px){
+    .testimonials{
+        flex-direction: column;
+    }
+    .testimonial{
+        margin-bottom: 1.2rem;
+    }
+}
+
+/* Testimoniol */
+
+/* Footer */
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    color: #8f8f8f;
+    padding: 4rem 1rem;
+    gap: 2rem;
+}
+
+.download-options>*{
+    margin: 1rem 0;
+}
+.download-options>p:first-child{
+    font-weight: bold;
+    color: #fff;
+}
+
+.download-options>div {
+    display: flex;
+}
+
+.download-options>div img{
+    width: 180px;
+}
+
+.logo-footer{
+    text-align: center;
+}
+
+.links-footer h3{
+    color: #fff;
+    margin-bottom: 0.8rem;
+}
+
+.links-footer ul{
+    list-style:none ;
+}
+
+.links-footer ul li{
+    margin-bottom: 0.5rem;
+    cursor: pointer;
 }
