--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,11 +11,11 @@ body{
 /* Header */
 
 .navbar{
-    background-color: #2c2c2c;
+    background-color: #ad1c95;
     padding: 1rem;
     position: sticky;
     top:0;
-    box-shadow: 10px 0px 10px #2c2c2c;
+    box-shadow: 10px 0px 10px #f3f2f2;
     z-index: 99;
 
 }
@@ -35,7 +35,7 @@ body{
 }
 
 .logo{
-    color: #0084ff;
+    color: #640054;
 }
 
 .logo span{
@@ -102,7 +102,7 @@ header{
 }
 
 .header-bottom-side-left button{
-    background-color: #0084ff;
+    background-color: #000000;
     border: none;
     cursor: pointer;
     padding: 0.8rem 3.8rem;
@@ -115,7 +115,7 @@ header{
 }
 
 .header-bottom-side-left button:hover{
-    background-color: #004c94;
+    background-color: #33313a;
 }
 
 
@@ -154,7 +154,7 @@ header{
 
     nav{
         position: absolute;
-        background-color: #2c2c2c;
+        background-color: #ad1c95;
         width: 100%;
         top: 46px;
         display: none;
@@ -183,7 +183,7 @@ main{
 }
 
 .gray-background{
-    background-color: #2c2c2c;
+    background-color: #df6493;
 }
 
 .page-inner-content{
@@ -261,7 +261,7 @@ main{
 .subtitle-underline{
     width: 100px;
     height: 5px;
-    background: #0084ff;
+    background: #003366;
     border-radius: 9999px;
     margin: 8px auto 0 auto;
 }
@@ -392,44 +392,138 @@ main{
 
 /* Footer */
 
-.footer-content{
+
+footer {
+    width: 100%;
+    color: var(--color-neutral-40);
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+#footer_content {
+    background-color: var(--color-neutral-10);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+} 
+
+#footer_social_media .footer-link {
     display: flex;
     align-items: center;
-    color: #8f8f8f;
-    padding: 4rem 1rem;
-    gap: 2rem;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--color-neutral-40);
+    border-radius: 50%;
+    transition: all 0.4s;
 }
 
-.download-options>*{
-    margin: 1rem 0;
-}
-.download-options>p:first-child{
-    font-weight: bold;
-    color: #fff;
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;    
 }
 
-.download-options>div {
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
     display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
 }
 
-.download-options>div img{
-    width: 180px;
+.footer-list .footer-link {
+    color: var(--color-neutral-30);
+    transition: all 0.4s;
 }
 
-.logo-footer{
-    text-align: center;
+.footer-list .footer-link:hover {
+    color: #7f37c9;
 }
 
-.links-footer h3{
-    color: #fff;
-    margin-bottom: 0.8rem;
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
-.links-footer ul{
-    list-style:none ;
+#footer_subscribe p {
+    color: var(--color-neutral-30);
 }
 
-.links-footer ul li{
-    margin-bottom: 0.5rem;
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color: var(--color-neutral-0);
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #7f37c9;
+    border: none;
+    color: var(--color-neutral-40);
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
     cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color: var(--color-neutral-0);
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
 }
